# duckdb-ml

./: .gitignore  Cargo.toml  Makefile  README.md
configure/: extension_version.txt
specs/: mlp.json
src/: batcher.rs  lib.rs  net.rs  train.rs  utils.rs
src/nn/: mod.rs  model.rs  train.rs
test/: auto_mpg.csv  test.sql
test/sql/: autompg.sql  autompg.test  functions.test
