[package]
name = "duckdb_nn"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[dependencies]
duckdb = { version = "1.3.2", features = ["vtab-loadable", "vscalar", "vtab-arrow"] }
duckdb-loadable-macros = "0.1.9"
libduckdb-sys = { version = "1.3.2", features = ["loadable-extension"] }
serde = "1.0.219"
serde_json = "1.0.143"
burn = { version = "0.18.0", features = ["train", "autodiff", "ndarray"] }
